# wake

./: .dockerignore  .envrc  .gitignore  .grype.yaml  .trivyignore  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
adapters/claude-sdk/: README.md  pyproject.toml
adapters/claude-sdk/src/wake_adapter_claude_sdk/: __init__.py  adapter.py
adapters/claude-sdk/tests/: test_adapter.py
adapters/conformance/: README.md  pyproject.toml
adapters/conformance/src/wake_test_conformance/: __init__.py  harness.py  result.py  runner.py
adapters/conformance/src/wake_test_conformance/scenarios/: __init__.py  _helpers.py  basic_step.py  cancellation.py  error_handling.py  idempotence.py  lifecycle.py  parallel_tools.py  pause_turn.py  resume.py  streaming.py  tool_use.py
adapters/conformance/tests/: test_scenarios.py  test_self.py
adapters/crewai/: README.md  pyproject.toml
adapters/crewai/examples/: __init__.py  simple_crew.py
adapters/crewai/src/wake_adapter_crewai/: __init__.py  adapter.py  callbacks.py  tool_bridge.py
adapters/crewai/tests/: conftest.py  test_adapter.py  test_callbacks.py  test_conformance.py  test_multi_agent.py  test_simple_crew.py  test_stub.py  test_tool_bridge.py
adapters/eval-langsmith/: README.md  pyproject.toml
adapters/eval-langsmith/src/wake_eval_langsmith/: __init__.py  adapter.py
adapters/eval-langsmith/tests/: test_adapter.py
adapters/eval-phoenix/: README.md  pyproject.toml
adapters/eval-phoenix/src/wake_eval_phoenix/: __init__.py  adapter.py
adapters/eval-phoenix/tests/: test_adapter.py
adapters/langgraph/: README.md  pyproject.toml
adapters/langgraph/examples/: __init__.py  simple_graph.py
adapters/langgraph/src/wake_adapter_langgraph/: __init__.py  adapter.py  event_mapping.py  tool_injection.py
adapters/langgraph/tests/: test_adapter.py  test_conformance.py  test_event_mapping.py  test_react_agent.py  test_simple_graph.py  test_stub.py  test_tool_injection.py
adapters/llm-litellm/: README.md  pyproject.toml
adapters/llm-litellm/src/wake_llm_litellm/: __init__.py  base.py  cost_tracking.py  normalize.py  provider.py
adapters/llm-litellm/tests/: _fixtures.py  test_cost_tracking.py  test_multi_provider.py  test_normalize.py  test_provider.py
adapters/postgres-store/: README.md  alembic.ini  pyproject.toml
adapters/postgres-store/alembic/: env.py
adapters/postgres-store/alembic/versions/: 0001_initial_schema.py  0002_tenancy_columns.py  0003_rbac.py  0004_idempotency.py  0004_system_user_constraint.py  0005_idempotency.py  0005_retention.py  0006_retention.py
adapters/postgres-store/examples/: quickstart.py
adapters/postgres-store/src/wake_store_postgres/: __init__.py  _helpers.py  agents.py  environments.py  events.py  heartbeat.py  locks.py  models.py  sessions.py  store.py  users.py
adapters/postgres-store/tests/: conftest.py  test_agent_store.py  test_environment_store.py  test_event_store.py  test_heartbeat.py  test_helpers.py  test_idempotency.py  test_listen_notify.py  test_locks.py  test_migrations.py  test_registry.py  test_retention.py  test_session_store.py  test_user_store.py
adapters/postgres-store/tests/load/: test_1000_sessions.py
adapters/pydantic-ai/: README.md  pyproject.toml
adapters/pydantic-ai/examples/: __init__.py  typed_agent.py
adapters/pydantic-ai/src/wake_adapter_pydantic_ai/: __init__.py  adapter.py  tool_bridge.py
adapters/pydantic-ai/tests/: __init__.py  conftest.py  test_adapter.py  test_conformance.py  test_streaming.py  test_tool_bridge.py  test_typed_agent.py
adapters/sandbox-runtime/: README.md  pyproject.toml
adapters/sandbox-runtime/examples/: restricted_bash.py
adapters/sandbox-runtime/src/wake_sandbox_runtime/: __init__.py  adapter.py  config.py  platform_detect.py  selector.py  subprocess_runner.py
adapters/sandbox-runtime/tests/: conftest.py  test_adapter.py  test_config.py  test_platform_detect.py  test_selector.py
adapters/sandbox-runtime/tests/integration/: test_real_sandbox.py
adapters/vault-infisical/: README.md  pyproject.toml
adapters/vault-infisical/src/wake_vault_infisical/: __init__.py  base.py  cli.py  oauth.py  proxy.py  vault.py
adapters/vault-infisical/tests/: test_cli.py  test_oauth.py  test_prompt_injection_protection.py  test_vault.py
catalog/: README.md  package.json
deploy/: Dockerfile  Dockerfile.frontend  README.md  docker-compose.backup.yml  docker-compose.dev.yml  docker-compose.yml
docs/: ADAPTER-CATALOG.md  AGENT-VERSIONING.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  COST-BUDGET.md  DASHBOARD.md  DEPLOY-AWS.md  DEPLOY-DOCKER-COMPOSE.md  DEPLOY-FLYIO.md  DEPLOY-KUBERNETES.md  DEPLOY.md  DISASTER-RECOVERY.md  EDIT-AND-REPLAY.md  EVAL-DATASET-FORMAT.md  EVAL-FRAMEWORK.md  EXAMPLES.md  FAQ.md  FRONTEND-TENANCY.md  LANDSCAPE.md  MIGRATION-FROM-LANGGRAPH.md  MIGRATION-FROM-MANAGED-AGENTS.md  NIX-DEVSHELL.md  OBSERVABILITY.md  OPERATIONS.md  PRINCIPLES.md  RBAC.md  README.md  REFERENCE-ARCH-AWS.md  REFERENCE-ARCH-GCP.md  RESEARCH.md  RETENTION.md  ROADMAP-HISTORICAL.md  ROADMAP.md  RUNBOOK.md  SDK-PYTHON.md  SDK-TYPESCRIPT.md  SECURITY-DISCLOSURE.md  SPEC-EVENT-SCHEMA.md  SPEC-HARNESS-ADAPTER.md  (+2 more)
frontend/: .eslintrc.cjs  .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
phases/: CODEX-REVIEW-PHASE-7.md  PHASE-0-design-lock.md  PHASE-1-CONTRACT.md  PHASE-1-skeleton.md  PHASE-2-CONTRACT.md  PHASE-2-first-adapter.md  PHASE-3-CONTRACT.md  PHASE-3-spec-validation.md  PHASE-4-CONTRACT.md  PHASE-4-production-stack.md  PHASE-5-CONTRACT.md  PHASE-5-operator-ui.md  PHASE-5-public-launch.md  PHASE-5.1-CONTRACT.md  PHASE-6-CONTRACT.md  PHASE-6-multi-tenancy.md  README.md  (+5 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/wake_ai_client/: __init__.py  agents.py  client.py  events.py  exceptions.py  sessions.py  sse.py  types.py
sdks/python/tests/: conftest.py  test_client.py  test_sessions.py  test_sse.py
(+343 files in other folders)
