[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-ai"
version = "0.0.1"
description = "Durable runtime substrate for AI agents — bring your framework, your model, your tools."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = ["ai", "agents", "llm", "claude", "mcp", "agent-runtime", "event-sourcing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "anthropic>=0.50",
    "docker>=7.1",
    "python-statemachine>=2.3",
    "python-ulid>=3.0",
    "structlog>=24.4",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx[testing]",
]
# Bundled reference adapter — installed from the in-tree workspace path so a
# fresh ``pip install -e ".[adapter-claude-sdk]"`` wires entry-point discovery
# without any extra commands.
adapter-claude-sdk = [
    "wake-adapter-claude-sdk",
]
all-adapters = [
    "wake-adapter-claude-sdk",
    "wake-store-postgres",
]
store-postgres = [
    "wake-store-postgres",
]

[project.scripts]
wake = "wake.cli.main:app"

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Documentation = "https://github.com/raphaelchristi/wake/tree/main/docs"
Repository = "https://github.com/raphaelchristi/wake"
Issues = "https://github.com/raphaelchristi/wake/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wake"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
