[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-ai"
version = "0.0.1"
description = "Durable runtime substrate for AI agents — bring your framework, your model, your tools."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = ["ai", "agents", "llm", "claude", "mcp", "agent-runtime", "event-sourcing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "anthropic>=0.50",
    "docker>=7.1",
    "python-statemachine>=2.3",
    "python-ulid>=3.0",
    "structlog>=24.4",
    "click>=8.1",
    "pyyaml>=6.0",
    # Phase 7 ops-throughput (Tier 1 gap #6).
    # slowapi pulls ``limits`` (the underlying token-bucket
    # implementation). Wake uses ``limits.aio`` directly for the
    # programmatic dependency path; ``slowapi`` itself is left as a
    # transitive so the decorator-based path is also available to
    # downstream integrators.
    "slowapi>=0.1.9",
    # Phase 7 ops-metrics-benchmark (Tier 1 gap #8).
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx[testing]",
]
# Bundled reference adapter — installed from the in-tree workspace path so a
# fresh ``pip install -e ".[adapter-claude-sdk]"`` wires entry-point discovery
# without any extra commands.
adapter-claude-sdk = [
    "wake-adapter-claude-sdk",
]
adapter-vault-infisical = [
    "wake-vault-infisical",
]
adapter-llm-litellm = [
    "wake-llm-litellm",
]
all-adapters = [
    "wake-adapter-claude-sdk",
    "wake-store-postgres",
    "wake-sandbox-runtime",
    "wake-vault-infisical",
    "wake-llm-litellm",
]
store-postgres = [
    "wake-store-postgres",
]
sandbox-runtime = [
    "wake-sandbox-runtime",
]
# Phase 7 ops-throughput: Redis-backed rate-limit storage for
# multi-replica deployments. The async backend in ``limits.aio``
# uses ``coredis``; the older sync API was ``redis-py``. We pin
# the modern stack so ``RedisStorage(redis://...)`` works out of
# the box on multi-pod Helm releases.
ratelimit-redis = [
    "coredis>=3.4",
]

[project.scripts]
wake = "wake.cli.main:app"

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Documentation = "https://github.com/raphaelchristi/wake/tree/main/docs"
Repository = "https://github.com/raphaelchristi/wake"
Issues = "https://github.com/raphaelchristi/wake/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wake"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
