[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-test-conformance"
version = "0.1.0"
description = "Conformance test suite for Wake HarnessAdapter implementations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = ["wake", "agents", "harness", "adapter", "conformance", "testing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
dependencies = [
    "wake-ai>=0.0.1",
    "pydantic>=2.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Documentation = "https://github.com/raphaelchristi/wake/tree/main/adapters/conformance"
Repository = "https://github.com/raphaelchristi/wake"

[tool.hatch.build.targets.wheel]
packages = ["src/wake_test_conformance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "E501",  # line length handled by formatter
    # The HarnessAdapter spec uses `type` and `input` as parameter names,
    # matching the Anthropic Messages API surface. We intentionally mirror
    # that convention here to keep the mental model 1:1.
    "A002",
    # Importing types eagerly is fine for a small package; gating behind
    # TYPE_CHECKING adds noise without measurable benefit.
    "TC001",
    "TC002",
    "TC003",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

# wake-ai (core) doesn't ship a py.typed marker yet; treat its public
# surface as typed (it IS, the marker file is just absent).
[[tool.mypy.overrides]]
module = ["wake.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/wake_test_conformance"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
