[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-adapter-crewai"
version = "0.1.0"
description = "Wake HarnessAdapter for CrewAI Crews."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = ["wake", "wake-adapter", "crewai", "agents", "adapter", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "wake-ai>=0.0.1",
    "crewai>=1.0",
    "pydantic>=2.9",
    "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "wake-test-conformance>=0.1.0",
]

# Entry-point discovery: ``AdapterRegistry.discover()`` picks this up.
# Note: ``create()`` returns an adapter wired to a trivial echo crew so the
# entry point is callable; real callers construct ``CrewAIAdapter(crew_factory)``
# directly with their own factory.
[project.entry-points."wake.adapters"]
crewai = "wake_adapter_crewai.adapter:create"

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Repository = "https://github.com/raphaelchristi/wake"
Issues = "https://github.com/raphaelchristi/wake/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wake_adapter_crewai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# importlib avoids collision when this `tests/` package is collected
# alongside another adapter's `tests/` package from the monorepo root.
addopts = "--import-mode=importlib"
