[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-eval-langsmith"
version = "0.1.0"
description = "LangSmith driver for the Wake eval framework — pull datasets + push results."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = ["wake", "wake-eval", "langsmith", "evals", "datasets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "wake-ai>=0.0.1",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]
# Optional: install the real langsmith SDK for users who want the
# upstream client surface in addition to our HTTP-only path. The
# adapter does NOT import it directly — we go through plain httpx
# so the package stays light by default.
langsmith = [
    "langsmith>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Documentation = "https://github.com/raphaelchristi/wake/tree/main/adapters/eval-langsmith"
Repository = "https://github.com/raphaelchristi/wake"

[tool.hatch.build.targets.wheel]
packages = ["src/wake_eval_langsmith"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501", "A002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["wake.*"]
ignore_missing_imports = true
