[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-adapter-langgraph"
version = "0.1.0"
description = "Wake HarnessAdapter for LangGraph StateGraphs."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = ["wake", "langgraph", "langchain", "agents", "adapter", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "wake-ai>=0.0.1",
    "langgraph>=1.0,<2.0",
    "langchain-core>=0.3",
    "python-ulid>=3.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "wake-test-conformance>=0.1.0",
]

# Entry-point discovery: ``AdapterRegistry.discover()`` picks this up.
# The ``create`` factory returns an adapter wired to a minimal default graph
# (echo-style). For real use, instantiate ``LangGraphAdapter(my_graph)``
# directly.
[project.entry-points."wake.adapters"]
langgraph = "wake_adapter_langgraph.adapter:create"

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Repository = "https://github.com/raphaelchristi/wake"
Issues = "https://github.com/raphaelchristi/wake/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wake_adapter_langgraph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# importlib avoids collision when this `tests/` package is collected
# alongside another adapter's `tests/` package from the monorepo root.
addopts = "-v --strict-markers --import-mode=importlib"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Wake core packages don't ship py.typed yet; treat their imports as untyped
# (so strict mode doesn't error on every Wake symbol we use).
[[tool.mypy.overrides]]
module = ["wake.*"]
ignore_missing_imports = true
follow_imports = "skip"
