[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wake-sandbox-runtime"
version = "0.1.0"
description = "Wake SandboxAdapter wrapping @anthropic-ai/sandbox-runtime (bubblewrap on Linux, sandbox-exec on macOS) with graceful Docker fallback."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wake contributors" },
]
keywords = [
    "wake",
    "wake-sandbox",
    "sandbox-runtime",
    "anthropic",
    "bubblewrap",
    "sandbox-exec",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]
dependencies = [
    "wake-ai>=0.0.1",
    "pydantic>=2.9",
    "python-ulid>=3.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

# Entry-point discovery: a future ``SandboxRegistry.discover()`` picks this up.
# Pattern parallels ``wake.adapters`` group used by HarnessAdapter discovery.
[project.entry-points."wake.sandboxes"]
sandbox-runtime = "wake_sandbox_runtime.adapter:create"

[project.urls]
Homepage = "https://github.com/raphaelchristi/wake"
Repository = "https://github.com/raphaelchristi/wake"

[tool.hatch.build.targets.wheel]
packages = ["src/wake_sandbox_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: requires sandbox-runtime CLI on PATH",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

# wake-ai (core) doesn't ship a py.typed marker yet; treat its public
# surface as typed (it IS, the marker file is just absent).
[[tool.mypy.overrides]]
module = ["wake.*"]
ignore_missing_imports = true
